--- a/Makefile.win32
+++ b/Makefile.win32
@@ -2,21 +2,27 @@ CC=$(CROSS)gcc
 LD=$(CROSS)ld
 AR=$(CROSS)ar
 PKG_CONFIG=$(CROSS)pkg-config
+WINDRES=$(CROSS)windres
 CFLAGS=-Wall -g -I$(CROSSENV)/usr/include `$(PKG_CONFIG) --cflags glib-2.0 gio-2.0 gtk+-2.0 json-glib-1.0` -mms-bitfields
 LDFLAGS=-Wl,-subsystem,windows
 LIBS=-L$(CROSSENV)/usr/lib `$(PKG_CONFIG) --libs glib-2.0 gio-2.0 gtk+-2.0 json-glib-1.0` -lcinet
 
 ci_SRC := $(wildcard *.c)
 ci_OBJ := $(ci_SRC:.c=.o)
+# TODO: cilogo-pixbuf.h only for ci-icon.c
+#ci_HEADERS := $(filter-out cilogo-pixbuf.h, $(wildcard *.h))
 ci_HEADERS := $(wildcard *.h)
 
 all: ciclient.exe
 
-ciclient.exe: $(ci_OBJ)
-	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
+ciclient.exe: $(ci_OBJ) ciclient.o
+	$(CC) $(LDFLAGS) -o $@ $^ ciclient.o $(LIBS)
 
 %.o: %.c $(ci_HEADERS)
 	$(CC) $(CFLAGS) -c -o $@ $<
+
+ciclient.o: ciclient.rc cilogo.ico
+	$(WINDRES) ciclient.rc ciclient.o
 
 clean:
 	rm -f ciclient.exe $(ci_OBJ)
